# BKEngine

./: .astylerc  .clang-format  .gitignore  Animation_8cpp.html  Animation_8cpp_source.html  Animation_8h.html  Animation_8h_source.html  Animation__templates_8h.html  Animation__templates_8h_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  CMakeLists.txt  CoreTest_8cpp.html  CoreTest_8cpp_source.html  CoreTest_8h.html  CoreTest_8h_source.html  Core_8cpp.html  Core_8cpp_source.html  Core_8h.html  Core_8h_source.html  Doxyfile  Element_8cpp.html  Element_8cpp_source.html  Element_8h.html  Element_8h_source.html  Element__templates_8h.html  Element__templates_8h_source.html  Entity_8cpp.html  Entity_8cpp_source.html  Entity_8h.html  Entity_8h_source.html  EventInterface_8h.html  EventInterface_8h_source.html  Event_8cpp.html  Event_8cpp_source.html  Event_8h.html  Event_8h_source.html  Fonts_8cpp.html  Fonts_8cpp_source.html  Fonts_8h.html  (+253 more)
cmake/: FindClangFormat.cmake  FindJsoncpp.cmake  Findcppcheck.cmake  ParseAndAddCatchTests.cmake  clang-format.cmake  cppcheck.cmake
include/: Animation.h  Core.h  Element.h  Entity.h  Fonts.h  Game.h  Logger.h  Misc.h  SDLWrapper.h  Scene.h  Texture.h  Timer.h
include/bkengine/: Animation.h  Core.h  Element.h  Entity.h  Event.h  EventInterface.h  Fonts.h  Game.h  GameSerializer.h  INISettingsInterface.h  Keys.h  Logger.h  Misc.h  SDLEventInterface.h  SDLWrapper.h  Scene.h  Serializable.h  SettingsInterface.h  Storage.h  Texture.h  Timer.h  backtrace.h
include/bkengine/builder/: AnimationBuilder.h  ElementBuilder.h  GameBuilder.h  ImageTextureBuilder.h  SceneBuilder.h  TextTextureBuilder.h  TextureBuilder.h
include/bkengine/builder/templates/: AnimationBuilder_templates.h  ElementBuilder_templates.h  GameBuilder_templates.h  SceneBuilder_templates.h  (+2 more)
include/bkengine/core/: ActivatableObject.h  ActivatorObject.h  Animation.h  Element.h  Entity.h  Game.h  HierarchicalObject.h  ImageTexture.h  LazyTextureContainer.h  NameableObject.h  Scene.h  TextTexture.h  Texture.h
include/bkengine/exceptions/: BuilderException.h  GameLoopException.h  IndexOutOfRangeException.h  NameAlreadyExistsException.h  NameNotFoundException.h  NotImplementedException.h  NullPointerException.h
include/bkengine/interfaces/: EventInterface.h  FontInterface.h  GraphicsInterface.h  ImageInterface.h
include/bkengine/templates/: Animation_templates.h  Element_templates.h  Game_templates.h  Scene_templates.h
include/bkengine/utils/: Color.h  Colors.h  CoordinateUtils.h  Event.h  Font.h  Fonts.h  Geometry.h  Image.h  ImageTexture.h  InterfaceContainer.h  Key.h  Keys.h  Logger.h  Misc.h  TextTexture.h  Timer.h  backtrace.h
include/templates/: Animation_templates.h  Element_templates.h  Game_templates.h  Scene_templates.h
latex/: Animation_8cpp.tex  Animation_8h.tex  Animation__templates_8h.tex  CMakeCXXCompilerId_8cpp.tex  CoreTest_8cpp.tex  CoreTest_8h.tex  Core_8cpp.tex  Core_8h.tex  Element_8cpp.tex  Element_8h.tex  Element__templates_8h.tex  Entity_8cpp.tex  Entity_8h.tex  EventInterface_8h.tex  Event_8cpp.tex  Event_8h.tex  Fonts_8cpp.tex  Fonts_8h.tex  GameSerializer_8cpp.tex  GameSerializer_8h.tex  Game_8cpp.tex  Game_8h.tex  Game__templates_8h.tex  INISettingsInterface_8cpp.tex  INISettingsInterface_8h.tex  Keys_8cpp.tex  Keys_8h.tex  Logger_8cpp.tex  Logger_8h.tex  Misc_8cpp.tex  Misc_8h.tex  SDLEventInterface_8cpp.tex  SDLEventInterface_8h.tex  SDLMock_8h.tex  SDLWrapper_8cpp.tex  SDLWrapper_8h.tex  Scene_8cpp.tex  Scene_8h.tex  Scene__templates_8h.tex  Serializable_8cpp.tex  (+78 more)
legacy_snippets/: Entity.cpp  Entity.h  Fonts.cpp  SDLEventInterface.h  SDLGraphicsInterface.cpp  Storage.h
legacy_snippets/serialization/: Animation_serialize.cpp  Element_serialize.cpp  GameSerializer.h  Game_serialize.cpp  Scene_serialize.cpp  Serializable.cpp
legacy_snippets/serialization/templates/: GameSerializer_templates.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  defines_1.js  defines_5.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+78 more)
src/: Animation.cpp  Core.cpp  Element.cpp  Entity.cpp  Event.cpp  Fonts.cpp  Game.cpp  GameSerializer.cpp  INISettingsInterface.cpp  Keys.cpp  Logger.cpp  Misc.cpp  SDLEventInterface.cpp  SDLWrapper.cpp  Scene.cpp  Serializable.cpp  Storage.cpp  Texture.cpp  Timer.cpp
src/builder/: AnimationBuilder.cpp  ElementBuilder.cpp  GameBuilder.cpp  ImageTextureBuilder.cpp  SceneBuilder.cpp  TextTextureBuilder.cpp  TextureBuilder.cpp
src/core/: Animation.cpp  Element.cpp  Entity.cpp  Game.cpp  NameableObject.cpp  Scene.cpp  Texture.cpp
src/core/builder/: AnimationBuilder.cpp  ElementBuilder.cpp  GameBuilder.cpp  ImageTextureBuilder.cpp  SceneBuilder.cpp  TextTextureBuilder.cpp  TextureBuilder.cpp
src/core/impl/: SDLImageTexture.cpp
src/core/utils/: AnimationUtils.cpp  ElementUtils.cpp  GameUtils.cpp  SceneUtils.cpp
src/interfaces/impl/: INISettingsInterface.cpp  SDLImageInterface.cpp
src/utils/: Color.cpp  Colors.cpp  CoordinateUtils.cpp  Event.cpp  Fonts.cpp  Geometry.cpp  InterfaceContainer.cpp  Key.cpp  Keys.cpp  Logger.cpp  Storage.cpp  Timer.cpp
test/mock/: MockFontInterface.h  MockGraphicsInterface.h  MockImageInterface.h
test/unit/: ActivatorObjectTest.cpp  AnimationBuilderTest.cpp  HierarchicalObjectTest.cpp  INISettingsInterfaceTest.cpp  NameableObjectTest.cpp  TextTextureBuilderTest.cpp
tests/: AnimationBuilderTest.cpp  AnimationUtilsTest.cpp  CoreTest.cpp  CoreTest.h  ElementBuilderTest.cpp  ElementUtilsTest.cpp  GameBuilderTest.cpp  GameUtilsTest.cpp  INISettingsInterfaceTest.cpp  ImageTextureBuilderTest.cpp  MockImageInterface.h  SDLMock.h  SceneBuilderTest.cpp  SceneUtilsTest.cpp  TextureTest.cpp  TextureTest.h  catch.hpp  main.cpp
(+29 files in other folders)
